--- a/styles/main.css
+++ b/styles/main.css
@@ -224,6 +224,15 @@ li a:hover {
   background-color: #fff;
 }
 
+.cloud-button {
+  background-color: #A9C2C5;
+  padding: 0 1em;
+  border-radius: 10px;
+  height: 50px;
+  text-align: center;
+}
+
+
 
 /* Header: Hero */
 
@@ -308,6 +317,7 @@ h2 {
   font-style: normal;
   font-size: 36px;
   line-height: 50px;
+  color: #202616;
 }
 
 h3 {
@@ -319,12 +329,14 @@ h3 {
   font-style: normal;
   font-size: 27px;
   line-height: 22px;
+  color: #202616;
 }
 
 p,
 div,
 li,
-ul {
+ul,
+button {
   font-family: 'biryaniregular',
     Arial,
     Helvetica,
@@ -333,6 +345,7 @@ ul {
   font-style: normal;
   font-size: 20px;
   line-height: 32px;
+  color: #202616;
 }
 
 /* Cloud - Overview tab */
@@ -376,6 +389,7 @@ ul {
   border: 2px solid #727559;
   padding: 1em;
   margin: 1em;
+  grid-row-gap: 1em;
 }
 
 .cloud-overview-intro {
@@ -400,6 +414,20 @@ ul {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-column-gap: 3em;
+  grid-row-gap: 1em;
+}
+
+.cloud-discovery-research {
+  margin: 2em 0;
+}
+
+.cloud-tab-title {
+  text-align: center;
+}
+
+.cloud-comp-analysis-title {
+  justify-self: center;
+  margin-top: 2em;
 }
 
 .cloud-comp-analysis {
@@ -421,6 +449,8 @@ ul {
   grid-column-end: 10;
   grid-row-start: 2;
   grid-row-end: 3;
+  max-width: 600px;
+  margin: 2em 0;
 }
 
 .cloud-comp-analysis-icloud {
@@ -428,6 +458,7 @@ ul {
   grid-column-end: 5;
   grid-row-start: 3;
   grid-row-end: 4;
+  max-width: 371px;
 }
 
 .cloud-comp-analysis-gdrive {
@@ -435,6 +466,7 @@ ul {
   grid-column-end: 9;
   grid-row-start: 3;
   grid-row-end: 4;
+  max-width: 371px;
 }
 
 .cloud-comp-analysis-pinterest {
@@ -442,13 +474,16 @@ ul {
   grid-column-end: 13;
   grid-row-start: 3;
   grid-row-end: 4;
+  max-width: 371px;
 }
 
 .cloud-comp-analysis_button {
-  grid-column-start: 6;
-  grid-column-end: 8;
+  grid-column-start: 5;
+  grid-column-end: 9;
   grid-row-start: 4;
   grid-row-end: 5;
+  margin: 2em 0;
+  justify-self: center;
 }
 
 /* 
@@ -591,6 +626,8 @@ ul {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: auto auto auto auto auto;
+  margin: 2em 0;
+  grid-row-gap: 1em;
 }
 
 .cloud-user-research_title {
@@ -598,6 +635,8 @@ ul {
   grid-column-end: 3;
   grid-row-start: 1;
   grid-row-end: 2;
+  justify-self: center;
+  margin-bottom: 2em;
 }
 
 .cloud-user-research_summary {
@@ -605,7 +644,7 @@ ul {
   grid-column-end: 2;
   grid-row-start: 3;
   grid-row-end: 4;
-  /* max-width: 450px; */
+  max-width: 450px;
 }
 
 .cloud-user-research_key-insights {
@@ -614,6 +653,12 @@ ul {
   grid-row-start: 2;
   grid-row-end: 6;
   display: grid;
+  max-width: 500px;
+  justify-self: center;
+}
+
+.cloud-insights_title {
+  justify-self: center;
 }
 
 .cloud-user-insights {
@@ -700,10 +745,16 @@ ul {
   height: 760px;
 } */
 
+.cloud-analysis {
+  margin: 2em 0;
+}
+
 .cloud-personas {
   display: grid;
   grid-template-columns: repeat(12, 1fr);
   grid-template-rows: auto auto auto auto;
+  margin: 2em 0;
+  grid-row-gap: 1em;
 }
 
 .cloud-personas-title {
@@ -711,6 +762,7 @@ ul {
   grid-column-end: 13;
   grid-row-start: 1;
   grid-row-end: 2;
+  justify-self: center;
 }
 
 .cloud-personas-summary {
@@ -718,6 +770,8 @@ ul {
   grid-column-end: 10;
   grid-row-start: 2;
   grid-row-end: 3;
+  max-width: 550px;
+  justify-self: center;
 }
 
 .cloud-personas-rebecca {
@@ -725,6 +779,8 @@ ul {
   grid-column-end: 6;
   grid-row-start: 3;
   grid-row-end: 4;
+  max-width: 530px;
+  justify-self: center;
 }
 
 .cloud-personas-marc {
@@ -732,13 +788,16 @@ ul {
   grid-column-end: 13;
   grid-row-start: 3;
   grid-row-end: 4;
+  max-width: 530px;
+  justify-self: center;
 }
 
 .cloud-personas_button {
-  grid-column-start: 6;
-  grid-column-end: 8;
+  grid-column-start: 5;
+  grid-column-end: 9;
   grid-row-start: 4;
   grid-row-end: 5;
+  justify-self: center;
 }
 
 /* 
@@ -773,6 +832,8 @@ ul {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: auto auto auto;
+  margin: 2em 0;
+  grid-row-gap: 1em;
 }
 
 .cloud-stories-title {
@@ -780,6 +841,7 @@ ul {
   grid-column-end: 3;
   grid-row-start: 1;
   grid-row-end: 2;
+  justify-self: center;
 }
 
 .cloud-stories-content {
@@ -787,6 +849,7 @@ ul {
   grid-column-end: 2;
   grid-row-start: 2;
   grid-row-end: 3;
+  max-width: 550px;
 }
 
 .cloud-stories-examples {
@@ -801,6 +864,7 @@ ul {
   grid-column-end: 3;
   grid-row-start: 3;
   grid-row-end: 4;
+  justify-self: center;
 }
 
 /* 
@@ -840,6 +904,8 @@ ul {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: auto auto auto;
+  margin: 2em 0;
+  grid-row-gap: 1em;
 }
 
 .cloud-flows-title {
@@ -847,6 +913,7 @@ ul {
   grid-column-end: 3;
   grid-row-start: 1;
   grid-row-end: 2;
+  justify-self: center;
 }
 
 .cloud-flows-text {
@@ -854,6 +921,7 @@ ul {
   grid-column-end: 2;
   grid-row-start: 2;
   grid-row-end: 3;
+  max-width: 550px;
 }
 
 .cloud-flows-img {
@@ -868,6 +936,7 @@ ul {
   grid-column-end: 3;
   grid-row-start: 3;
   grid-row-end: 4;
+  justify-self: center;
 }
 
 /* Cloud - Visual Design tab */
@@ -938,6 +1007,8 @@ ul {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: auto auto auto auto auto;
+  margin: 2em 0;
+  grid-row-gap: 1em;
 }
 
 .cloud-wireframes-title {
@@ -945,6 +1016,7 @@ ul {
   grid-column-end: 3;
   grid-row-start: 1;
   grid-row-end: 2;
+  justify-self: center;
 }
 
 .cloud-wireframes-text {
@@ -952,6 +1024,7 @@ ul {
   grid-column-end: 2;
   grid-row-start: 3;
   grid-row-end: 5;
+  max-width: 550px;
 }
 
 .cloud-wireframes-img {
@@ -969,6 +1042,7 @@ ul {
   grid-column-end: 3;
   grid-row-start: 5;
   grid-row-end: 6;
+  justify-self: center;
 }
 
 /* 
@@ -1004,6 +1078,7 @@ ul {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: auto auto auto auto;
+  grid-row-gap: 1em;
 }
 
 .cloud-mockups-title {
@@ -1011,6 +1086,7 @@ ul {
   grid-column-end: 3;
   grid-row-start: 1;
   grid-row-end: 2;
+  justify-self: center;
 }
 
 .cloud-mockups-text-1 {
@@ -1020,6 +1096,8 @@ ul {
   grid-row-end: 3;
   column-count: 2;
   column-gap: 1em;
+  max-width: 1016px;
+  justify-self: center;
 }
 
 .cloud-mockups-img {
@@ -1027,6 +1105,7 @@ ul {
   grid-column-end: 3;
   grid-row-start: 3;
   grid-row-end: 4;
+  justify-self: center;
 }
 
 .cloud-mockups-text-2 {
@@ -1036,6 +1115,8 @@ ul {
   grid-row-end: 5;
   column-count: 2;
   column-gap: 1em;
+  max-width: 1016px;
+  justify-self: center;
 }
 
 /* Cloud - Prototyping & Testing tab */
@@ -1077,6 +1158,7 @@ ul {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: auto auto;
+  grid-row-gap: 1em;
 }
 
 .cloud-usability-title {
@@ -1084,6 +1166,7 @@ ul {
   grid-column-end: 3;
   grid-row-start: 1;
   grid-row-end: 2;
+  justify-self: center;
 }
 
 .cloud-usability_card-1 {
@@ -1091,6 +1174,7 @@ ul {
   grid-column-end: 2;
   grid-row-start: 2;
   grid-row-end: 3;
+  max-width: 624px;
 }
 
 .cloud-usability_card-2 {
@@ -1098,6 +1182,7 @@ ul {
   grid-column-end: 3;
   grid-row-start: 2;
   grid-row-end: 3;
+  max-width: 624px;
 }
 
 /* .cloud-preference {
@@ -1124,7 +1209,9 @@ ul {
 } */
 
 
-
+.cloud-preference-title {
+  text-align: center;
+}
 
 /* Cloud - Branding tab */
 
@@ -1158,6 +1245,7 @@ ul {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: auto auto auto auto auto;
+  grid-row-gap: 1em;
 }
 
 .cloud-branding-title {
@@ -1165,6 +1253,7 @@ ul {
   grid-column-end: 3;
   grid-row-start: 1;
   grid-row-end: 2;
+  justify-self: center;
 }
 
 .cloud-branding-text-1 {
@@ -1174,6 +1263,8 @@ ul {
   grid-row-end: 3;
   column-count: 2;
   column-gap: 1em;
+  max-width: 1016px;
+  justify-self: center;
 }
 
 .cloud-branding-img1 {
@@ -1181,6 +1272,7 @@ ul {
   grid-column-end: 2;
   grid-row-start: 3;
   grid-row-end: 4;
+  justify-self: center;
 }
 
 .cloud-branding-img2 {
@@ -1188,6 +1280,7 @@ ul {
   grid-column-end: 3;
   grid-row-start: 3;
   grid-row-end: 4;
+  justify-self: center;
 }
 
 .cloud-branding-text-2 {
@@ -1195,6 +1288,8 @@ ul {
   grid-column-end: 3;
   grid-row-start: 4;
   grid-row-end: 5;
+  max-width: 550px;
+  justify-self: center;
 }
 
 .cloud-branding_button {
@@ -1202,6 +1297,8 @@ ul {
   grid-column-end: 3;
   grid-row-start: 5;
   grid-row-end: 6;
+  justify-self: center;
+
 }
 
 
@@ -1212,7 +1309,11 @@ ul {
   height: 870px;
 }
 
-.cloud-conclusion-text {
+.cloud-conclusion-title {
+  text-align: center;
+}
+
+. .cloud-conclusion-text {
   column-count: 2;
   column-gap: 3em;
 }
